--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: local_hero
 description: A widget which implicitly launches a hero animation when its position changed within the same route.
-version: 0.2.0
-homepage: https://github.com/letsar/local_hero
+version: 0.2.1
+homepage: https://github.com/bambuh/local_hero
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
